# configconfig

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
